<resources>
    <string name="app_name">frnd</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="weekday_sun">SUN</string>
    <string name="weekday_mon">MON</string>
    <string name="weekday_tue">TUE</string>
    <string name="weekday_wed">WED</string>
    <string name="weekday_thur">THUR</string>
    <string name="weekday_fri">FRI</string>
    <string name="weekday_sat">SAT</string>
</resources>